--- a/package.json
+++ b/package.json
@@ -4,12 +4,10 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
+  "type": "module",
   "author": "Alessandro Xavier Santos",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.18.1",
-    "nodemon": "^2.0.19"
-  }
+  "license": "ISC"
 }
